--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!--palavras ('dev' + 'me')-->
   <main class="card">
     <div class="minhas-info">
-      <img src="src/Images/download.jpg" alt="imagem de perfil">   
+      <img src="src/Images/Logo.jpeg" alt="imagem de perfil">   
       <h1 class="nome">Luiz Eduardo Pozza</h1>
       <h2 class="cargo">Fullstack Developer Júnior</h2>     
       </div>
@@ -25,7 +25,7 @@
       <div class="conteudo">
         <ul class="abas">
           <li id = 'aba1' class="aba selecionada">
-            <img src="src/Images/sobre.gif" alt="icone sobre mim">
+            <img src="src/Images/sword.gif" alt="icone sobre mim">
           </li>
           <li id = 'aba2' class="aba">
             <img src="src/Images/coracao.gif" alt="icone redes sociais">
@@ -35,20 +35,23 @@
         <div id = "infoAbas" class="info-abas">
           <div id = "sobreMim" class="info selecionada">
 
-            <h3 class="sub-titulo">Sobre</h3>
+            <h3 class="sub-titulo">Sobre mim</h3>
 
               <div id = "descricao" class="descricao">
                 <p>
-                  Oi! meu nome é Rodrigo da Silva, seja bem-vindo(a)!
-                </p>
+                  Olá, Meu nome é Luiz Eduardo Pozza, Seja bem-vindo ao meu cartão digital!
+                </p><br/>
   
                 <p>
-                  Sou uma pessoa apaixonada pela programação desde que eu tinha 15
-                  anos. Sempre tive o sonho de trabalhar com programação e
-                  atualmente comecei a colocar esse sonho em prática estudando
+                  Bom, acho que antes de qualquer coisa, sou um sonhador, alguem que 
+                  define suas metas e faz o que tem de ser feito para que o que almeja, seja alcançado.
+                  Uma de minhas metas, colocadas por ao menos 2 anos, é atuar como desenvolvedor, desde então venho
+                  estudando e aplicando o conhecimento agregado em projetos reais, como este. Esse é o meu cartão digital,
+                  um projeto desenvolvido afim de aplicar meu conhecimento e compartilhar um poouco com todos.
+                  Hoje me sinto seguro pra atuar como um desenvolvedor na área de front e de backEnd nas ferramentas de: 
                   <span>HTML, CSS, JavaScript, NodeJs, BootStrap, Express, Dart.</span> 
-                  Gosto muito de café (até demais), e meus principais hobbies são
-                  jogar MMO RPG, ver animes e séries.
+                  Acho extremamente necessário a reflexão sobre a vida e sobre todas nossas atitudes,
+                  e as coisas mais importantes pra mim é, apreciar o progresso e o caminho até a meta, pois o hoje é a dádiva, aprecie o presente e alcançar as metas impostas por mim mesmo, uma satisfação sem preço.
                 </p>
               </div>            
           </div>
